--- a/index.html
+++ b/index.html
@@ -3,23 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Video Player</title>
+    <title>YouTube Video Player</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <div id="video-player">
-    <video id="video" controls preload="metadata">
-        <source src="usedtobeyoung.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-    <div id="video-controls">
-        <button id="play-pause">Play</button>
-        <!-- Add other controls as needed -->
-    </div>
+    <div id="player"></div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://www.youtube.com/iframe_api"></script>
 <script src="script.js"></script>
 </body>
 </html>
