--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js');
+      navigator.serviceWorker.register('sw.js');
     }
   </script>
 </body>
