--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="mobile-web-app-capable" content="yes">
-  <title>My Video Player</title>
+  <title>SmooTube</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/framework7/7.0.0/css/framework7.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/framework7/7.0.0/js/framework7.min.js"></script>
 </head>
@@ -12,12 +12,12 @@
   <div class="statusbar"></div>
   <div class="navbar">
     <div class="navbar-inner">
-      <div class="center">My Video Player</div>
+      <div class="center">SmooTube</div>
     </div>
   </div>
   <div class="page">
     <div class="page-content">
-      <iframe id="myVideo" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0"></iframe>
+      <iframe id="myVideo" src="https://www.youtube.com/embed/vScyWHnzo5E" frameborder="0"></iframe>
     </div>
   </div>
   <script>
