--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
   <div class="page">
     <div class="page-content">
-      <iframe id="myVideo" src="https://www.youtube.com/embed/vScyWHnzo5E" frameborder="0"></iframe>
+      <iframe id="myVideo" src="https://www.youtube-nocookie.com/embed/?v=Tx1sqYc3qas&list=RDTx1sqYc3qas&start_radio=1" frameborder="0"></iframe>
     </div>
   </div>
   <script>
