--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <title>SmooTube</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="mobile-web-app-capable" content="yes">
-  <title>SmooTube</title>
+  <meta name="HandheldFriendly" content="true" />
+  <meta name="MobileOptimized" content="400" />
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="google" content="notranslate" />
+  <meta name="theme-color" content="black" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-title" content="SmooTube" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" /
+  <link rel="icon" href="favicon.ico" />
+  <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="icon.png"
+  />
+  <link rel="apple-touch-icon" href="icon.png" />
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/framework7/7.0.0/css/framework7.min.css">
